Update UpdateUser & DeleteUser handlers, Matcher Service handlers, Swagger
