# docs/swagger.yaml
@@ -160,6 +160,26 @@ paths:
       tags:
       - auth
   /user:
+    delete:
+      consumes:
+      - application/json
+      description: Удалить пользователя из системы
+      parameters:
+      - description: User ID
+        in: path
+        name: uid
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Delete user
+      tags:
+      - user
     post:
       consumes:
       - application/json
@@ -181,25 +201,35 @@ paths:
       summary: Create user
       tags:
       - user
-  /user/{uid}:
-    delete:
+    put:
       consumes:
       - application/json
-      description: Удалить пользователя из системы
+      description: Обновить данные пользователя пользователя в системе
       parameters:
       - description: User ID
         in: path
         name: uid
         required: true
         type: string
+      - description: User data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/UpdateUserRequest'
       responses:
         "200":
           description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
         "500":
           description: Internal Server Error
-      summary: Delete user
+      summary: Update user
       tags:
       - user
+  /user/{uid}:
     get:
       consumes:
       - application/json
@@ -224,32 +254,6 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get user
-      tags:
-      - user
-    put:
-      consumes:
-      - application/json
-      description: Обновить данные пользователя пользователя в системе
-      parameters:
-      - description: User ID
-        in: path
-        name: uid
-        required: true
-        type: string
-      - description: User data
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/UpdateUserRequest'
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      summary: Update user
       tags:
       - user
   /user/session:
